# ps6

LabHome/.ssh/: id_rsa  id_rsa.pub
LabHome/Contacts/: Jennifer Wourms (1).contact  Jennifer Wourms.contact
LabHome/Desktop/: Google Chrome.lnk
LabHome/Downloads/: Charging 0.opj  Charging.cmbl  Discharging.cmbl  ENGL 398 1759 Syllabus & Schedule .docx  ResistanceVCurrentLab1.opj  log2log.opj  parallel capacitors (1).cmbl  series capactitors.cmbl
LabHome/Links/: Desktop.lnk  Downloads.lnk
LabHome/My Documents/: Backup.opj  Ceramics and Glasses.ces  Chem Graphs.xps  Filter.ini  Hm vs. AWP.ces  MRFiles.ini  MenuCommands_E.txt  Metals and Alloys.ces  Mineralized Tissue.ces  NLSF.ini  ORIGIN~1.INI  Origin Folder.lnk  Origin Samples Folder.lnk  Origin.ini  Origin9.INI  Polymers and Elastomers.ces  SYSTEM.CNF  Template.ini  Thermal expansion & heat of fusion.ces  Untitled.ces  Wood and Wood-Like Materials.ces
LabHome/My Documents/DefaultSettings/GUI/: FitLinear.xml
LabHome/My Documents/Projects/EECS301/: Thumbs.db
LabHome/My Documents/Themes/AnalysisAndReportTable/: 0-FitLinear-Last used.ois  0-FitNL-Last used.ois
LabHome/My Documents/fitfunc/: NewFunction.fdf  NewFunction1.fdf
LabHome/Searches/: desktop.ini
ps6_ws/devel/: .catkin  .rosinstall  setup.sh
ps6_ws/devel/lib/pkgconfig/: ps6_hw.pc
ps6_ws/devel/lib/ps6_hw/: ariac_example_node
ps6_ws/devel/share/ps6_hw/cmake/: ps6_hwConfig.cmake
ps6_ws/src/ps6_hw/: CMakeLists.txt  package.xml
ps6_ws/src/ps6_hw/config/: team_conf.yaml
ps6_ws/src/ps6_hw/src/: ariac_example_node.cpp
